import { describe, expect, it } from "vitest";
import { UnsupportedDeviceError, renderAllConfigs, renderCiscoIosConfig } from "../src/render.js";
import { g1Design, g4Design } from "./fixtures.js";

describe("renderAllConfigs — G1 branch-office (dual HSRP)", () => {
  const configs = renderAllConfigs(g1Design);

  it("matches the recorded snapshot for every cisco-ios device", () => {
    expect(configs).toMatchSnapshot();
  });

  it("renders a config for every cisco-ios router/switch, and skips the Fortinet firewall entirely", () => {
    expect(Object.keys(configs).sort()).toEqual(["rtr-01", "rtr-02", "sw-01", "sw-02"]);
  });

  it("starts every config with the mandatory lab-validation banner", () => {
    for (const config of Object.values(configs)) {
      expect(config.startsWith("! Base configuration generated by NetDesign AI — validate in a lab before production.")).toBe(
        true,
      );
    }
  });

  it("gives the two HSRP routers the same virtual IP and group, but different priorities", () => {
    const rtr01 = configs["rtr-01"]!;
    const rtr02 = configs["rtr-02"]!;
    expect(rtr01).toContain("standby 10 ip 10.30.2.1");
    expect(rtr02).toContain("standby 10 ip 10.30.2.1");
    expect(rtr01).toContain("standby 10 priority 110");
    expect(rtr02).toContain("standby 10 priority 100");
    expect(rtr01).toContain("standby 10 preempt");
  });

  it("gives each router its own distinct subinterface address per VLAN, not the shared gateway", () => {
    const rtr01 = configs["rtr-01"]!;
    const rtr02 = configs["rtr-02"]!;
    expect(rtr01).toContain("interface GigabitEthernet0/1.10\n encapsulation dot1Q 10\n ip address 10.30.2.2 255.255.255.0");
    expect(rtr02).toContain("interface GigabitEthernet0/1.10\n encapsulation dot1Q 10\n ip address 10.30.2.3 255.255.255.0");
  });

  it("points the default route at the firewall's real IP on that router's P2P link, not a guess", () => {
    expect(configs["rtr-01"]).toContain("ip route 0.0.0.0 0.0.0.0 10.30.1.4");
    expect(configs["rtr-02"]).toContain("ip route 0.0.0.0 0.0.0.0 10.30.1.6");
  });

  it("renders the switch's global VLAN database and trunk allowed-VLAN list", () => {
    const sw01 = configs["sw-01"]!;
    expect(sw01).toContain("vlan 10\n name corp-data");
    expect(sw01).toContain("switchport trunk allowed vlan 10,20,30");
  });

  it("omits OSPF and NAT overload sections when the design doesn't use them (this composer always uses static routing)", () => {
    for (const config of Object.values(configs)) {
      expect(config).not.toContain("router ospf");
      expect(config).not.toContain("ip nat");
    }
  });
});

describe("renderAllConfigs — G4 smb-flat (single router, no redundancy)", () => {
  const configs = renderAllConfigs(g4Design);

  it("matches the recorded snapshot", () => {
    expect(configs).toMatchSnapshot();
  });

  it("gives the lone router's subinterface the VLAN gateway address itself, with no HSRP lines at all", () => {
    const rtr01 = configs["rtr-01"]!;
    expect(rtr01).toContain("interface GigabitEthernet0/1.10\n encapsulation dot1Q 10\n ip address 10.40.2.1 255.255.255.0");
    expect(rtr01).not.toContain("standby");
  });
});

describe("renderCiscoIosConfig error handling", () => {
  it("throws UnsupportedDeviceError for a non-cisco-ios vendor", () => {
    const firewall = g1Design.devices.find((d) => d.id === "fw-01")!;
    expect(() => renderCiscoIosConfig(firewall, g1Design)).toThrow(UnsupportedDeviceError);
    expect(() => renderCiscoIosConfig(firewall, g1Design)).toThrow(/vendorHint "cisco-ios"/);
  });

  it("throws UnsupportedDeviceError for a cisco-ios device with an unsupported role", () => {
    const fakeCoreSwitch = { ...g1Design.devices[0]!, id: "core-01", role: "core-switch" as const, vendorHint: "cisco-ios" as const };
    expect(() => renderCiscoIosConfig(fakeCoreSwitch, g1Design)).toThrow(UnsupportedDeviceError);
    expect(() => renderCiscoIosConfig(fakeCoreSwitch, g1Design)).toThrow(/no cisco-ios template for role "core-switch"/);
  });
});
